<resources>
    <string name="app_name">Astrologer</string>
    <string name="btn1">မဟာဘုတ် အဟော</string>
    <string name="btn2">မဟာဘုတ် သက်ရောက်အဟော</string>
    <string name="btn3">ဂြိုဟ်စား အဟော</string>
    <string name="btn4">သက်ရောက် အဟော</string>
    <string name="btn5">ဆယ့်နှစ်ရာသီခွင် ဗေဒင်အဟော</string>
    <string name="btn_back">နောက်သို့</string>
    <string name="year">မြန်မာမွေးနှစ်</string>
    <string name="age">အသက်</string>
    <string name="day">မွေးနံ</string>
    <string name="tv_year_hint">
    မြန်မာမွေးနှစ် (မြန်မာမွေးသက္ကရာဇ်) တွက်နည်း -
    သင်္ကြန် နှစ်ဆန်းတစ်ရက်နေ့ ကျော်ပြီးမှ မွေးသူများသည် မိမိအင်္ဂလိပ်မွေးနှစ်ထဲမှ ၆၃၈ ကိုနုတ်လျှင် မိမိမြန်မာမွေးနှစ်ကို ရပါမည်။
    သင်္ကြန် နှစ်ဆန်းတစ်ရက်နေ့ မတိုင်မီ မွေးသူများသည် မိမိအင်္ဂလိပ်မွေးနှစ်ထဲမှ ၆၃၉ ကိုနုတ်လျှင် မိမိမြန်မာမွေးနှစ်ကို ရပါမည်။
    </string>

    <string-array name="maharBote">
        <item>တနင်္ဂနွေ</item>
        <item>တနင်္လာ</item>
        <item>အင်္ဂါ</item>
        <item>ဗုဒ္ဓဟူး</item>
        <item>ကြာသပတေး</item>
        <item>သောကြာ</item>
        <item>စနေ</item>
    </string-array>

    <string-array name="dayJosar">
        <item>တနင်္ဂနွေ</item>
        <item>တနင်္လာ</item>
        <item>အင်္ဂါ</item>
        <item>ဗုဒ္ဓဟူး</item>
        <item>စနေ</item>
        <item>ကြာသပတေး</item>
        <item>ရာဟု</item>
        <item>သောကြာ</item>
    </string-array>
   <!-- မြန်မာမွေးနှစ် (မြန်မာမွေးသက္ကရာဇ်) ကိုရိုက်ထည့်ပါ။-->
</resources>

