<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/age"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_age"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="75dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_age"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/day"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spn_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_age"
        android:layout_alignLeft="@+id/tv_day"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="55dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_day"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_maharbote_thetyout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/btn_back" />
    </LinearLayout>
</RelativeLayout>