<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/astrologer2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_big"
        android:gravity="center"
        android:text="@string/btn1"
        android:textAppearance="@style/Theme.Astrologer.HeadLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/tv_year_hint"
        android:textAppearance="@style/Theme.Astrologer.SubBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_head" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_80"
        android:text="@string/year"
        android:textAppearance="@style/Theme.Astrologer.Body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_65"
        android:layout_marginEnd="@dimen/margin_big"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_70"
        android:text="@string/day"
        android:textAppearance="@style/Theme.Astrologer.Body"
        app:layout_constraintStart_toStartOf="@+id/tv_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_year" />

    <Spinner
        android:id="@+id/spn_day"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_70"
        android:layout_marginEnd="@dimen/margin_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_day"
        app:layout_constraintTop_toBottomOf="@+id/tv_year" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_day"
        app:layout_constraintTop_toBottomOf="@+id/tv_day">

        <Button
            android:id="@+id/btnmahar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_90"
            android:layout_marginEnd="@dimen/margin_big"
            android:background="@drawable/bg_forward"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_big"
            android:background="@drawable/bg_forward"
            android:text="@string/btn_back"
            app:layout_constraintStart_toStartOf="@+id/btnmahar"
            app:layout_constraintTop_toBottomOf="@+id/btnmahar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>